@@ -29,6 +29,7 @@ This release also includes changes from <<release-3-3-7, 3.3.7>>.
 * Changed definition of generic in signature of `from(Traversal)` and `to(Traversal)` steps to use a wildcard rather than `Vertex`.
 * Fixed problem with connection pool sizing and retry.
 * Changed `:>` in Gremlin Console to submit the client-side timeout on each request.
+* Provided method to override the request identifier with `RequestOptions`.
 * Added option to set per-request settings on a `Traversal` submitted via `Bytecode`.
 * Fixed the Gryo registration for `OptionsStrategy` as it was not serializing state properly.
 
